# previewer

./: .gitignore  README.md  default.nix  flake.nix  pyproject.toml  shell.nix
.github/workflows/: poetry.yml
previewer/: cli.py  disposition.py  filters.py  imagemagick.py  montage.py  resolution.py  tools.py  utils.py  video.py  wand.py
previewer/commands/: folder_thumbnailer.py  gif.py  montage.py  resize.py  sequence.py  utils.py  video_thumbnailer.py
tests/: conftest.py  test_cli.py  test_externaltools.py  test_montage.py  test_pillow.py  test_resolution.py  test_tools.py  test_utils.py  test_video.py  test_wand.py
